RESOLVED FIXED111436
Fix cast-align warning in ASCIIFastPath.h on ARM
https://bugs.webkit.org/show_bug.cgi?id=111436
Summary Fix cast-align warning in ASCIIFastPath.h on ARM
Csaba Osztrogonác
Reported 2013-03-05 06:48:32 PST
ASCIIFastPath.h introduced in https://trac.webkit.org/changeset/104127 , but on ARM we get zillion warning from it: /home/webkitbuildbot/oszi/WebKitNix/Source/WTF/wtf/text/ASCIIFastPath.h: In instantiation of 'bool WTF::charactersAreAllASCII(const CharacterType*, size_t) [with CharacterType = short unsigned int; size_t = unsigned int]': /home/webkitbuildbot/oszi/WebKitNix/Source/WTF/wtf/text/WTFString.h:606:66: required from here /home/webkitbuildbot/oszi/WebKitNix/Source/WTF/wtf/text/ASCIIFastPath.h:88:9: warning: cast from 'const short unsigned int*' to 'const MachineWord* {aka const unsigned int*}' increases required alignment of target type [-Wcast-align] This cast is safe, because the adress is aligned here. Patch is coming soon. ( Similar fixes: - https://trac.webkit.org/changeset/67028 - https://trac.webkit.org/changeset/64302 )
Attachments
Patch (1.53 KB, patch)
2013-03-05 06:50 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2013-03-05 06:50:16 PST
WebKit Review Bot
Comment 2 2013-03-05 13:43:28 PST
Comment on attachment 191489 [details] Patch Clearing flags on attachment: 191489 Committed r144811: <http://trac.webkit.org/changeset/144811>
WebKit Review Bot
Comment 3 2013-03-05 13:43:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.