Fix cast-align warning in ASCIIFastPath.h on ARM https://bugs.webkit.org/show_bug.cgi?id=111436

Reviewed by Benjamin Poulain.

* wtf/text/ASCIIFastPath.h:
(WTF::charactersAreAllASCII):


Canonical link: https://commits.webkit.org/129836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144811 268f45cc-cd09-0410-ab3c-d52691b4dbfc